# Practica1

./: .gitignore  CMakeLists.txt  auxiliares.cpp  auxiliares.h  ejercicios.cpp  ejercicios.h  main.cpp
